objects/LAT_BR_CPO_ClientPortfolio__c.object
<CustomObject>
    <fields>
        <fullName>LAT_BR_ActionPlan__c</fullName>
        <label>BR Action Plan</label>
        <length>4000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>LAT_BR_City__c</fullName>
        <label>BR City</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LAT_BR_ClientCodeAN8__c</fullName>
        <label>BR Client Code AN8</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LAT_BR_Client__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>BR Client</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>1 AND 2 AND (3 OR 4)</booleanFilter>
            <filterItems>
                <field>$Source.RecordTypeId</field>
                <operation>equals</operation>
                <value>BR Standard</value>
            </filterItems>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>equals</operation>
                <value>Off Trade, On Trade</value>
            </filterItems>
            <filterItems>
                <field>Account.Status__c</field>
                <operation>notEqual</operation>
                <value>Não aprovado</value>
            </filterItems>
            <filterItems>
                <field>Account.Rating</field>
                <operation>notEqual</operation>
                <value>Cliente inativo</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>LAT Client Portfolios</relationshipLabel>
        <relationshipName>LAT_BR_ClientPortfolio</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LAT_BR_Neighbourhood__c</fullName>
        <label>BR Neighbourhood</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LAT_BR_VisitPlanning__c</fullName>
        <label>BR Visit Planning</label>
        <referenceTo>Planejamento__c</referenceTo>
        <relationshipName>LAT_BR_ClientPortfolio</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>LAT_BR_VisitsFrequency__c</fullName>
        <label>BR Visits Frequency</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <label>LAT Client Portfolio</label>
    <nameField>
        <displayFormat>CC-{0}</displayFormat>
        <label>Client Portfolio Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>LAT Client Portfolios</pluralLabel>
    <recordTypes>
        <fullName>LAT_BR_CPO_Standard</fullName>
        <active>true</active>
        <label>BR Standard</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>LAT_BR_CPO_VR01_NoUpdateToPlanejamiento</fullName>
        <active>true</active>
        <errorConditionFormula>$Profile.Name != &apos;Administrador do sistema&apos;
&amp;&amp;
$Profile.Name != &apos;Business administrator&apos;
&amp;&amp;
$Profile.Name != &apos;LAT_BusinessAdministrator&apos;
&amp;&amp;
$Profile.Name != &apos;LAT_BR_Business_Administrator&apos;
&amp;&amp;
$Profile.Name != &apos;LAT_BR2_BusinessAdministrator&apos;
&amp;&amp;
$Profile.Name != &apos;PR BRAZIL System Administrator&apos;
&amp;&amp;
$Profile.Name != &apos;LAT_SystemAdministrator&apos;
&amp;&amp;
NOT(ISNEW())
&amp;&amp;
ISCHANGED(LAT_BR_VisitPlanning__c)</errorConditionFormula>
        <errorDisplayField>LAT_BR_VisitPlanning__c</errorDisplayField>
        <errorMessage>This field can not be modified</errorMessage>
    </validationRules>
</CustomObject>